--- a/deployment/local/docker-compose.yml
+++ b/deployment/local/docker-compose.yml
@@ -37,6 +37,8 @@ services:
       POSTGRES_DB: game_state
       POSTGRES_USER: usr
       POSTGRES_PASSWORD: pwd
+    volumes:
+      - ../../src/db/postgres-data:/var/lib/postgresql/data  
 
   adminer:
     image: adminer
