--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,17 @@
 version: '3.5'
 
+
 volumes:
-  db:
+  data:
     driver: local
+
+networks:
+  game-net:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.5.0.0/16
+         gateway: 10.5.0.1    
 
 services:
 
@@ -12,6 +21,9 @@ services:
       dockerfile: Dockerfile
     container_name: ui
     restart: always
+    networks:
+      game-net:
+        ipv4_address: 10.5.0.2   
     ports:
       - 4040:80 
     environment:
@@ -23,13 +35,17 @@ services:
       dockerfile: Dockerfile
     container_name: gameserver
     restart: always
+    networks:
+      game-net:
+        ipv4_address: 10.5.0.3   
     ports:
       - 5000:80 
     environment:
       PORT: 80
-      DB_SERVER: POSTGRES_DB:5432  
+      DB_SERVER: POSTGRES_DB 
       DB_USER: starrealms_app
       DB_PASSWORD: pwd
+      DB_NAME: game_state
 
   database:
     build: 
@@ -37,19 +53,29 @@ services:
       dockerfile: Dockerfile
     container_name: POSTGRES_DB
     restart: always
+    networks:
+      game-net:
+        ipv4_address: 10.5.0.4   
     ports:
       - 5432:5432
     environment:
       POSTGRES_DB: game_state
       POSTGRES_USER: starrealms_app
       POSTGRES_PASSWORD: pwd
+      PGDATA: /var/lib/postgresql/data/
+    command: ["postgres", "-c", "config_file=/etc/postgresql.conf"]    
     volumes:
-      - db:/var/lib/postgresql/data/ 
+      - data:/var/lib/postgresql/data/
+      - ./database/postgresql.conf:/etc/postgresql.conf
+      - ./database/pg_hba.conf:/etc/postgresql/pg_hba.conf
 
   adminer:
     image: adminer
     container_name: adminer
     restart: always
+    networks:
+      game-net:
+        ipv4_address: 10.5.0.5   
     ports:
       - 8080:8080
     environment:
@@ -63,5 +89,8 @@ services:
     depends_on:
         - ui
         - api
+    networks:
+      game-net:
+        ipv4_address: 10.5.0.6       
     ports:
       - 80:80    
