managed to config ph_hba.conf

--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,2 +1,4 @@
 FROM postgres:alpine
 COPY init.sql /docker-entrypoint-initdb.d/
+COPY update_hba.sh /docker-entrypoint-initdb.d/
+COPY upgdate_config.sh /docker-entrypoint-initdb.d/
