--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,10 @@ services:
         ipv4_address: 10.5.0.3   
     ports:
       - 5000:80 
+    depends_on:
+      - database  
     environment:
+      CONTAINER_DEPLOYED: true
       PORT: 80
       DB_SERVER: POSTGRES_DB 
       DB_USER: starrealms_app
